set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter")
file(GLOB SRCS "Src/*.c")

add_library(core STATIC ${SRCS})
target_include_directories(core PUBLIC inc)
target_include_directories(core PUBLIC ${CMAKE_SOURCE_DIR}/Core/Inc)
target_include_directories(core PUBLIC ${CMAKE_SOURCE_DIR}/Drivers/CMSIS/Include)
target_include_directories(core PUBLIC ${CMAKE_SOURCE_DIR}/Drivers/CMSIS/Device/ST/STM32F3xx/Include)
target_include_directories(core PUBLIC ${CMAKE_SOURCE_DIR}/Drivers/STM32F3xx_HAL_Driver/Inc)
target_include_directories(core PUBLIC ${CMAKE_SOURCE_DIR}/Drivers/STM32F3xx_HAL_Driver/Inc/Legacy)
